# kofipass

./: .gitignore  CMakeLists.txt  Makefile  README.md  depend  generate_deb_pkg.sh  test.kpass
src/: CMakeLists.txt  cli.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli.hxx
src/cli/display/: display.cpp
src/cli/edit/: edit.cpp
src/cli/field/: field.cpp
src/cli/summary/: summary.cpp
src/cli/tools/: tools.cpp  tools.hxx
src/crypto/: CMakeLists.txt  crypto_provider.cpp  crypto_provider.hxx
src/crypto/argon2/: argon2_wrapper.cpp  argon2_wrapper.hxx
src/crypto/openssl/: base64.cpp  base64.hxx  rijndael.cpp  rijndael.hxx  sha256.cpp  sha256.hxx
src/crypto/sodium/: chacha20poly1305.cpp  chacha20poly1305.hxx
src/items/: CMakeLists.txt  items.cpp  items.hxx
src/items/2falogin/: 2falogin.cpp  2falogin.hxx
src/items/custom/: custom.cpp  custom.hxx
src/items/custom/field/: field.cpp  field.hxx
src/items/display/: display.hxx
src/items/encrypted_folder/: efolder.cpp  efolder.hxx
src/items/folder/: folder.cpp  folder.hxx
src/items/item_base/: item_base.cpp  item_base.hxx
src/items/json/: item_json.hxx
src/items/simple_login/: slogin.cpp  slogin.hxx
src/items/unknown/: unknown.cpp  unknown.hxx
src/items/visit/: visitable.hxx
src/json/: CMakeLists.txt  export.cpp  export.hxx
src/memory/: CMakeLists.txt  memory.cpp  memory.hxx
src/test/: CMakeLists.txt  tests.cpp  tests.hxx
