add_library(kpass_item_base item_base/item_base.cpp)

add_library(kpass_slogin simple_login/slogin.cpp)
add_library(kpass_folder folder/folder.cpp)
add_library(kpass_efolder encrypted_folder/efolder.cpp)
add_library(kpass_2falogin 2falogin/2falogin.cpp)

target_link_libraries(kpass_slogin kpass_item_base)
target_link_libraries(kpass_folder kpass_item_base)
target_link_libraries(kpass_efolder base64 kpass_crypto_provider kpass_folder kpass_item_base kpass_item_json_export)
target_link_libraries(kpass_2falogin kpass_slogin cppotp)
